# serialport

./: .gitignore  .npmignore  CHANGELOG.md  CMakeLists.txt  azure-pipelines.yml  cxb.config.js  package.json  tsconfig.json  webpack.config.js
ci/: install.yml  node_x64.yml
cmake/: android.cmake  imx6qwin.cmake  msvc.cmake
src/: index.ts  tsconfig.json
src/node/: CMakeLists.txt  index.cpp  serialport.cpp  serialport.h
test/: test.js  test.ts
