CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(serialport )
set(CMAKE_USE_RELATIVE_PATHS ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CXB_MODULE_DIST})
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CXB_MODULE_DIST})
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CXB_MODULE_DIST})
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CXB_MODULE_DIST})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CXB_MODULE_DIST})
SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CXB_MODULE_DIST})
SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CXB_MODULE_DIST})
SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CXB_MODULE_DIST})

set (CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${PROJECT_SOURCE_DIR}/cmake")

set_property(GLOBAL PROPERTY USE_FOLDERS ON) 
if(NODE)
ADD_SUBDIRECTORY(src/node)
else()
ADD_SUBDIRECTORY(src/passoa)
endif()